--- a/WeatherAppProject/Views/Weather/Weather.cshtml
+++ b/WeatherAppProject/Views/Weather/Weather.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "WEATHER APPLICATION";
+    ViewData["Title"] = "WEATHER APPLICATION PROJECT";
 }
 @foreach (var cityList in ViewBag.cityList)
 {
